add table style

--- a/views/listview.html
+++ b/views/listview.html
@@ -26,6 +26,7 @@
 
 {{>filter}}
 
+<div class="table-wrap">
 <table class="table table-bordered table-striped table-hover x-table">
     <thead>
         <tr class="label-default">
@@ -50,5 +51,6 @@
     {{/records}}
     </tbody>
 </table>
+</div>
 
 {{>pagination}}
