prevent enter for search

--- a/views/mainview.html
+++ b/views/mainview.html
@@ -4,7 +4,8 @@
     <a href="#" class="glyphicon glyphicon-filter" title="{{string.filter}}"></a>
 </h2>
 
-<form action="#" method="post" accept-charset="utf-8" class="panel panel-default x-mv x-filter x-collapsed">
+<form action="#" onsubmit="return false" method="post" accept-charset="utf-8" class="panel panel-default x-mv x-filter x-collapsed">
+    <input type="hidden" name="_csrf" value="{{csrf}}" />
     <div class="panel-heading">
         <h3 class="panel-title">{{string.filter}}</h3>
     </div>
@@ -15,7 +16,7 @@
                 <input type="text" name="table" class="form-control" />
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3">
-                
+
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3">
                 <button type="button" name="clear" class="btn btn-default form-control">{{string.clear}}</button>
